HF/Normal/LF trigger
Attenuation setting also for MATH
Do not close the docks
Reduce CPU load when display is stopped, faster shutdown

3.1.3
2020-09-30
RPM build improvements
New command line option --fontsize
Display horizontal trigger level line when marker is moved
Make smooth trigger setting persistent

3.1.2
2020-07-29
Small improvements for FreeBSD
Hide Windows console

3.1.1
2020-06-30
Refresh button to restart roll mode trace
Help menu link to AC modification howto
Minor robustness improvements

3.1.1-rc3
2020-06-26
Real roll mode for slow sample rates

3.1.1-rc2
2020-06-23
Scroll wheel moves the markers
Configuration menu parameter to use AC coupling HW modification

3.1.1-rc1
2020-06-20
Slow timebases up to 10s/div
Near real time screen updates with trigger mode NONE
Screenshot and hardcopy are identical to the screen content
Force OpenGL SL version (option --useGLSL120 or --useGLSL150)

3.1.0
2020-05-08
Demo mode without scope hardware (option -d or --demoMode)
Support for high-dpi displays
Improved pdf readability
Russian translation

3.0.4
2020-04-13
Better marker setting/removing
Fix sample rate spinbox handling
Fix race condition when switching 1ch/2ch
Persistent calibration out frequency
FW 0206
Updated DDS120 FW 0100 (supports more calibration out frequencies)
Spanish translation

3.0.3
2020-03-17
FW 0205
Fix histogram issue when switching TY -> XY

3.0.2
2020-03-01
Apply realtime prio and scheduler
Histogram for TY voltage traces
Variable probe gain setting
French translation complete

3.0.1
2019-12-13
More robust USB handling for all OSs
Improve manipulation and export of frozen or single traces
Export XY display
Automatic icon selection for light/dark themes
Eye candy
Automatic start after FW upload

3.0.0
2019-11-15
Major changes:
Support for Sainsmart DDS120
Support for Hantek6022 AC HW modification
Update to FW 0203
MacOSX bundle
Measure duty cycle of triggered trace
New versioning scheme

v2.16
2019-10-15
Major changes from v2.16-rc1: