@@ -1,3 +1,4 @@
+Display power dissipation of load resistance (optional)
 HF/Normal/LF trigger
 Attenuation setting also for MATH
 Do not close the docks
